# Colossus

./: .gitignore  README.md  cargo.toml  rust-toolchain.toml
colossus-core/: Cargo.toml
colossus-core/benches/: poseidon2_aead.rs
colossus-core/src/: build.rs  configuration.rs  directory.rs  lib.rs  test.rs
colossus-core/src/access_control/: README.md  capability.rs  encrypted_header.rs  mod.rs  revocation.rs  root_api.rs  root_authority.rs  test_utils.rs
colossus-core/src/access_control/capability/: access_right.rs  attestation.rs  authority.rs  token.rs  tracing.rs
colossus-core/src/access_control/cryptography/: ae_poseidon2.rs  mlkem.rs  mod.rs  traits.rs
colossus-core/src/akd/: akd_label.rs  akd_value.rs  auditor.rs  azks.rs  errors.rs  hash.rs  local_auditing.rs  mod.rs  node_label.rs  proofs.rs  test_utils.rs  tree_node.rs  utils.rs
colossus-core/src/akd/azks/: element.rs  element_set.rs  parallelism.rs  tests.rs
colossus-core/src/akd/ecvrf/: ecvrf_impl.rs  mod.rs  tests.rs
colossus-core/src/akd/errors/: auditor.rs  azks.rs  directory.rs  parallelism.rs  storage.rs  tree_node.rs  verification.rs  vrf.rs
colossus-core/src/akd/tests/: mod.rs  test_config_node_labels.rs  test_core_protocol.rs  test_errors.rs  test_preloads.rs
colossus-core/src/akd/verify/: base.rs  history.rs  lookup.rs  mod.rs
colossus-core/src/configuration/: colossus.rs
colossus-core/src/credentials/: builder.rs  config.rs  entry.rs  error.rs
colossus-core/src/credentials/primitives/: ec.rs  keypair.rs  set_commit.rs  utils.rs
colossus-core/src/crypto/: error.rs  hash.rs  mod.rs  pairing.rs  provider.rs  signature.rs
colossus-core/src/dac/: builder.rs  ec.rs  entry.rs  error.rs  keypair.rs  keys.rs  mod.rs  set_commit.rs  set_commits.rs  utils.rs  zkp.rs
colossus-core/src/dac/builder/: claim.rs  credential.rs  offer.rs  proof.rs  test.rs
colossus-core/src/dac/ec/: univarpoly.rs
colossus-core/src/dac/keypair/: alias.rs  cbor.rs  cred_proof.rs  error.rs  issuer.rs  offer.rs  signature.rs  spseq_uc.rs
colossus-core/src/dac/keys/: error.rs  kdf.rs  publish.rs  vk.rs
colossus-core/src/miden/: mod.rs  notes.rs
colossus-core/src/policy/: access_policy.rs  access_structure.rs  attribute.rs  blinded.rs  dimension.rs  errors.rs  mod.rs  rights.rs  tests.rs
colossus-core/src/policy/data_struct/: dictionary.rs  error.rs  mod.rs  revision_map.rs  revision_vec.rs
colossus-core/src/proto/: mod.rs  tests.rs
colossus-core/src/proto/specs/: types.proto  types.rs
colossus-core/src/storage/: cache.rs  ecvrf.rs  memory.rs  mod.rs  tests.rs  traits.rs  transaction.rs  types.rs
colossus-core/src/storage/cache/: high_parallelism.rs  (+1 more)
colossus-core/src/test/: access_control.rs  attestation.rs  blinded_attributes.rs  fixtures.rs  secure_data_transfer.rs
(+17 files in other folders)
